--- a/to-do/package.json
+++ b/to-do/package.json
@@ -1,9 +1,11 @@
 {
   "name": "to-do",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "A simple to-do list",
+  "author": "Johannes Mändle",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
