--- a/to-do/package.json
+++ b/to-do/package.json
@@ -5,7 +5,7 @@
   "author": "Johannes Mändle",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config src/proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
